@@ -1,3 +1,7 @@
+2014-06-01  Yury Aliaev  <mutab0r@rambler.ru>
+	* app/gui.c: fixed switching to tracker after current module saving
+	from a page other than tracker.
+
 2014-04-12  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/file-operations.[ch], app/gui.c, app/instrument-editor.c,
 	app/sample-editor.c: switching back from file operations page
